@@ -31,6 +31,7 @@ Version 1.4.12 - SVN
     Patch provided by Christopher E. Brown.
   - Fix bug in sitewide SMTP settings still using authenticated user, rather
     than configured settings (#1835942).
+  - Fixed mailto: functionality.
 
 Version 1.4.11 - 29 September 2007
 ----------------------------------
